[package]
name = "implement-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyn-clone = "1.0.13"
once_cell = "1.18.0"
uzers = "0.11"
by_address = "1.1.0"
downcast-rs = "1.2.0"

[dev-dependencies]
rstest = "0.18.2"
